--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,7 +33,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ TelegrafChecklistBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -67,3 +67,14 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+doctrine_mongodb:
+        connections:
+            default:
+                server: mongodb://localhost:27017
+                options: {}
+        default_database: test_database
+        document_managers:
+            default:
+                auto_mapping: true
+        auto_generate_hydrator_classes: true 
