--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,12 +1,17 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        Telegraf\ChecklistBundle\Document\User: plaintext #sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
+        document_members:
+            mongodb: { class: TelegrafChecklistBundle:User, property: username }   
+        #my_mongo_provider:
+        #  mongodb: {class: Telegraf\ChecklistBundle\Document\User, property: username}
         in_memory:
             memory:
                 users:
@@ -18,21 +23,16 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern: ^/
+            anonymous: ~
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                login_path:  login
+                check_path:  login_check
+                default_target_path: homepage
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path:   /logout
+                target: homepage
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
