--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,23 +1,16 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
-        Telegraf\ChecklistBundle\Document\User: plaintext #sha512
+        Telegraf\ChecklistBundle\Document\User: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        document_members:
-            mongodb: { class: TelegrafChecklistBundle:User, property: username }   
-        #my_mongo_provider:
-        #  mongodb: {class: Telegraf\ChecklistBundle\Document\User, property: username}
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-
+        my_mongo_provider:
+            mongodb: {class: Telegraf\ChecklistBundle\Document\User, property: username}
+            
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
