Enabled fos user bundle, customized twig templates

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,4 +100,9 @@ doctrine_mongodb:
         document_managers:
             default:
                 auto_mapping: true
-        auto_generate_hydrator_classes: true 
+        auto_generate_hydrator_classes: true
+
+fos_user:
+    db_driver: mongodb
+    firewall_name: main
+    user_class: Telegraf\ChecklistBundle\Document\User
