--- a/src/Telegraf/ChecklistBundle/Resources/config/routing.yml
+++ b/src/Telegraf/ChecklistBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 homepage:
-    pattern:  /hello
+    pattern:  /
     defaults: { _controller: TelegrafChecklistBundle:Default:index }
 create_item:
     pattern:  /createItem
@@ -13,16 +13,3 @@ delete_item:
 tick_item:
     pattern:  /tickItem
     defaults: { _controller: TelegrafChecklistBundle:Default:tickItem }
-join:
-    pattern:  /join
-    defaults: { _controller: TelegrafChecklistBundle:Security:join }
-createUser:
-    pattern:  /join/do
-    defaults: { _controller: TelegrafChecklistBundle:Security:createUser }
-login:
-    path:   /login
-    defaults:  { _controller: TelegrafChecklistBundle:Security:login }
-login_check:
-    path:   /login_check
-logout:
-    path:   /logout
