--- a/src/Telegraf/ChecklistBundle/Resources/config/services.yml
+++ b/src/Telegraf/ChecklistBundle/Resources/config/services.yml
@@ -11,3 +11,10 @@ services:
         arguments: [@router]
         tags:
             - { name: kernel.event_subscriber }
+
+    telegraf_checklist.login:
+        class: Telegraf\ChecklistBundle\EventListener\LoginListener
+        arguments: [@router]
+        tags:
+            - { name: 'kernel.event_listener', event: 'security.interactive_login', method: 'onSecurityInteractiveLogin' }
+            
