--- a/src/Telegraf/ChecklistBundle/Resources/config/validation.yml
+++ b/src/Telegraf/ChecklistBundle/Resources/config/validation.yml
@@ -2,3 +2,8 @@ Telegraf\ChecklistBundle\Document\Item:
     properties:
         text:
             - NotBlank: ~
+            - Length:
+                min: 1
+                max: 100
+                minMessage: "Your task must be at least {{ limit }} characters length"
+                maxMessage: "Your task cannot be longer than {{ limit }} characters length"
